[gd_scene load_steps=4 format=2]

[ext_resource path="res://Controller.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/images/player.png" type="Texture" id=3]

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Controller" type="Node" parent="."]
script = ExtResource( 1 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.033
[connection signal="joy_move" from="Controller" to="." method="_on_Controller_joy_move"]
[connection signal="joy_shoot" from="Controller" to="." method="_on_Controller_joy_shoot"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
